--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
-streamlit==1.36.0
-pandas==2.2.1
-gspread==6.0.2
-google-auth==2.30.0
-sentence-transformers==3.0.1
-torch==2.3.0
-transformers==4.38.2
-numpy==1.26.4
+streamlit>=1.36
+pandas>=2.2
+gspread>=6.0.2
+google-auth>=2.30
+sentence-transformers>=3.0.1
+torch>=2.3.0
