--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,13 @@
-streamlit>=1.36
-pandas>=2.2
-gspread>=6.0.2
-google-auth>=2.30
-sentence-transformers>=3.0.1
-torch>=2.3.0
+streamlit==1.36.0
+pandas==2.2.1
+gspread==6.0.2
+google-auth==2.30.0
+sentence-transformers==3.0.1
+torch==2.6.0
+transformers==4.45.0
+numpy==1.26.4
+tqdm==4.66.2
+scikit-learn==1.5.0
+scipy==1.13.0
+nltk==3.8.1
+protobuf==4.25.3
