--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,11 @@ pandas==2.2.1
 gspread==6.0.2
 google-auth==2.30.0
 sentence-transformers==2.7.0
-torch==2.5.1
-transformers==4.40.0
+torch==2.6.0
+transformers==4.45.0
 numpy==1.26.4
+tqdm==4.66.2
 scikit-learn==1.5.0
+scipy==1.13.0
+nltk==3.8.1
 protobuf==4.25.3
