--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,6 @@
-streamlit==1.36.0
-pandas==2.2.1
-gspread==6.0.2
-google-auth==2.30.0
-sentence-transformers==2.7.0
-torch==2.6.0
-transformers==4.45.0
-numpy==1.26.4
-scikit-learn==1.5.0
-protobuf==4.25.3
+streamlit>=1.36
+pandas>=2.2
+gspread>=6.0.2
+google-auth>=2.30
+sentence-transformers>=3.0.1
+torch>=2.3.0
